--- a/cadastro.html
+++ b/cadastro.html
@@ -19,18 +19,18 @@
                 <div id="msgSuccess"></div>
                 <div class="campos">
                     <label for="user" id="labelUser">Usuário</label>
-                    <input type="text" name="user" id="user" required>
+                    <input type="text" name="user" id="user">
                 </div>
                 <div class="campos">
                     <label for="senha" id="labelSenha">Senha</label>
-                    <input type="password" name="senha" id="senha" required>
+                    <input type="password" name="senha" id="senha">
                 </div >
                 <div class="campos">
                     <label for="confirmarSenha" id="labelConfirma">Confirmar Senha</label>
-                    <input type="password" name="confirmarSenha" id="confirmarSenha" required>
+                    <input type="password" name="confirmarSenha" id="confirmarSenha">
                 </div>
                 <div class="botoes">
-                    <button onclick="cadastrar()">cadastrar</button>
+                    <button onclick="cadastrar()" type="button">cadastrar</button>
                     <a href="index.html"><button type="button">retornar</button></a>
                 </div>
             </fieldset>
