Logica de login adicionada

--- a/login.html
+++ b/login.html
@@ -14,23 +14,24 @@
 
     <main>
         <section id="caixa-login">
-            <form action="get" class="login">
+            <form class="login">
                 <fieldset>
                     <h2>Login</h2>
+                    <div id="msg"></div>
                     <div class="campo">
-                        <label for="user">Usuário</label>
-                        <input type="text" name="user">
+                        <label for="user" id="labelUser">Usuário</label>
+                        <input type="text" name="user" id="user">
                     </div>
                     <div class="campo">
-                        <label for="senha">Senha</label>
-                        <input type="password" name="senha">
+                        <label for="senha" id="labelSenha">Senha</label>
+                        <input type="password" name="senha" id="senha">
                     </div>
                     <div class="botoes">
-                        <button type="submit">Conectar-se</button>
+                        <button onclick="conectar()" type="button" >Conectar-se</button>
                         <a href="index.html"><button type="button">Voltar</button></a>
                     </div>
                     <div class="recuperar">
-                        <a href="" >Esqueceu sua senha?</a>
+                        <a href="" >Cadastrar-se</a>
                     </div>      
                 </fieldset>
             </form>
@@ -43,4 +44,5 @@
     </footer>
     
 </body>
+<script src="js/login.js"></script>
 </html>
