href adicionada em cadastro na tela de login

--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                         <a href="index.html"><button type="button">Voltar</button></a>
                     </div>
                     <div class="recuperar">
-                        <a href="" >Cadastrar-se</a>
+                        <a href="cadastro.html" >Cadastrar-se</a>
                     </div>      
                 </fieldset>
             </form>
