Tela Usuario criada

--- a/login.html
+++ b/login.html
@@ -6,12 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="Styles/login.css">
 </head>
-<body>
+<body class="container">
     <header class="header">
         <a href="index.html"><img src="Images/Logo.png" alt="Logo do site" class="logo" width="90px" height="70px"></a>
         <a href="index.html"><h1 id="titulo">My Movie List</h1></a>
     </header>
-
     <main>
         <section id="caixa-login">
             <form class="login">
