--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="container">
     <header class="header">
         <a href="index.html"><img src="Images/Logo.png" alt="Logo do site" class="logo" width="90px" height="70px"></a>
         <a href="index.html"><h1 id="titulo">My Movie List</h1></a>
